[workspace]
members = [
    "libraries/authentication",
    "libraries/canister_functions",
    "libraries/chat",
    "libraries/errors",
    "libraries/intercanister_call_wrappers",
    "libraries/table",
    "libraries/table_index_types",
    "libraries/tournaments",
    "libraries/user",
    "src/cycle_dispenser",
    "src/clans_canister",
    "src/clans_index",
    "src/log_store",
    "src/table_canister",
    "src/tournament_canister",
    "src/tournament_index",
    "src/table_index",
    "src/users_canister",
    "src/users_index",
    "tests",
    "webserver", "libraries/clan",
]
resolver = "2"

[workspace.dependencies]
candid = "0.10.14"
ic-cdk = "0.18.3"
ic-ledger-types = "0.15.0"
ic-stable-structures = "0.6.8"
ic-cdk-timers = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }

