[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
candid = "0.10"
canister_functions = { path = "../libraries/canister_functions" }
errors = { path = "../libraries/errors" }
ic-cdk = "0.12"
ic-cdk-timers = "0.6"
ic-ledger-types = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
lazy_static = "1.4.0"
pocket-ic = "4.0.0"
table = { path = "../libraries/table" }
table_index_types = { path = "../libraries/table_index_types" }
user = { path = "../libraries/user" }
tournaments = { path = "../libraries/tournaments" }
serial_test = "3.2.0"
currency = { git = "ssh://git@github.com/zk-game-dao/currency.git", branch = "main"  }
