[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
candid = { workspace = true }
errors = { path = "../libraries/errors" }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-ledger-types = "0.15.0"
serde.workspace = true
serde_json = "1.0.114"
lazy_static = "1.4.0"
pocket-ic = "9.0.1"
table = { path = "../libraries/table" }
table_index_types = { path = "../libraries/table_index_types" }
user = { path = "../libraries/user" }
tournaments = { path = "../libraries/tournaments" }
serial_test = "3.2.0"
currency = { git = "https://github.com/zk-game-dao/currency.git", branch = "main" }
