[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10.13"
errors = { path = "../libraries/errors" }
ic-agent = "0.39.3"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
table = { path = "../libraries/table" }
axum = { version = "0.8.1", features = ["ws"] }
serde_json = "1.0.138"
web-push = "0.10.2"
reqwest = { version = "0.12.12", features = ["json"] }
dotenv = "0.15.0"
twitter-v2 = { version = "0.1.8", features = ["oauth2"] }
tower-http = { version = "0.6.2", features = ["cors"] }
base64 = "0.22.1"
octocrab = "0.43.0"
thiserror = "2.0.11"
