[package]
name = "canister_functions"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
errors = { path = "../errors" }
ic-cdk = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
ic-stable-structures = { workspace = true }
ic-ledger-types = "0.15.0"
serde_bytes = "0.11.15"
user = { path = "../user" }
table = { path = "../table" }
