[package]
name = "canister_functions"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
errors = { path = "../errors" }
ic-cdk = { workspace = true }
serde.workspace = true
ic-stable-structures = { workspace = true }
ic-ledger-types = "0.15.0"
serde_bytes = "0.11.15"
user = { path = "../user" }
table = { path = "../table" }
sha2 = "0.10.9"
