[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
errors = { path = "../errors" }
ic-cdk = "0.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ic-ledger-types = "0.13.0"
serde_bytes = "0.11.15"
thiserror = "1.0.63"
ic-stable-structures = "0.6.8"
