[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
errors = { path = "../errors" }
ic-cdk = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
ic-ledger-types = "0.15.0"
serde_bytes = "0.11.15"
thiserror = "1.0.63"
ic-stable-structures = "0.6.8"
