[package]
name = "clan"
version = "0.1.0"
edition = "2024"

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true

currency = { git = "https://github.com/zk-game-dao/currency.git", branch = "main" }
errors = { path = "../errors" }
user = { path = "../user" }
table = { path = "../table" }
