[package]
name = "intercanister_call_wrappers"
version = "0.1.0"
edition = "2024"

[dependencies]
candid = "0.10"
ic-cdk = "0.18.3"

canister_functions = { path = "../canister_functions" }
errors = { path = "../errors" }
table = { path = "../table" }
tournaments = { path = "../tournaments" }
user = { path = "../user" }