[package]
name = "intercanister_call_wrappers"
version = "0.1.0"
edition = "2024"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }

canister_functions = { path = "../canister_functions" }
currency = { git = "https://github.com/zk-game-dao/currency.git", branch = "main" }
clan = { path = "../clan" }
errors = { path = "../errors" }
table = { path = "../table" }
tournaments = { path = "../tournaments" }
user = { path = "../user" }