[package]
name = "table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10"
errors = { path = "../errors" }
ic-cdk = "0.12"
ic-cdk-timers = "0.6"
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
lazy_static = "1.4.0"
ic-ledger-types = "0.10.0"
serde_bytes = "0.11.14"
sha2 = "0.10.8"
ic-stable-structures = "0.6.5"
user = { path = "../../libraries/user" }
currency = { git = "ssh://git@github.com/zk-game-dao/currency.git", branch = "main"  }

[features]
default = []
test_default = []
