[package]
name = "table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10"
ic-cdk = "0.18.3"
ic-cdk-timers = "0.12"
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
serde_bytes = "0.11.14"
sha2 = "0.10.8"
ic-stable-structures = "0.6.5"
ic-ledger-types = "0.15.0"

errors = { path = "../errors" }
user = { path = "../../libraries/user" }
currency = { git = "https://github.com/zk-game-dao/currency.git", branch = "main" }

[features]
default = []
test_default = []
