[package]
name = "tournaments"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
errors = { path = "../errors" }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
table = { path = "../table" }
thiserror = "1.0.63"
