[package]
name = "tournaments"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde.workspace = true
thiserror = "1.0.63"

errors = { path = "../errors" }
macros = { path = "../macros" }
table = { path = "../table" }
user = { path = "../user" }
