[package]
name = "log_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
errors = { path = "../../libraries/errors" }
ic-cdk = "0.15.2"
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
serde_bytes = "0.11.14"
canistergeek_ic_rust = "0.4.3"
ic-stable-structures = "0.6.5"
table = { path = "../../libraries/table" }
serde_cbor = "0.11.2"

[features]
default = []
test_default = []
