[package]
name = "log_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
serde_bytes = "0.11.14"
ic-stable-structures = { workspace = true }
serde_cbor = "0.11.2"

authentication = { path = "../../libraries/authentication" }
errors = { path = "../../libraries/errors" }
table = { path = "../../libraries/table" }

[features]
default = []
test_default = []
