[package]
name = "table_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
authentication = { path = "../../libraries/authentication" }
candid = "0.10"
canister_functions = { path = "../../libraries/canister_functions" }
chat = { path = "../../libraries/chat" }
errors = { path = "../../libraries/errors" }
ic-cdk = "0.15.2"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
ic-ledger-types = "0.13.0"
serde_bytes = "0.11.14"
sha2 = "0.10.8"
canistergeek_ic_rust = "0.4.3"
ic-stable-structures = "0.6.5"
table = { path = "../../libraries/table" }
tournaments = { path = "../../libraries/tournaments" }
user = { path = "../../libraries/user" }
currency = { git = "https://github.com/zk-game-dao/currency.git", branch = "main" }
futures = "0.3.31"

[features]
default = []
test_default = []
