[package]
name = "tournament_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
authentication = { path = "../../libraries/authentication" }
candid = "0.10"
canister_functions = { path = "../../libraries/canister_functions" }
currency = { git = "https://github.com/zk-game-dao/currency.git", branch = "main" }
errors = { path = "../../libraries/errors" }
ic-cdk = "0.18.3"
ic-cdk-timers = "0.12" # Feel free to remove this dependency if you don't need timers
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
ic-ledger-types = "0.15.0"
serde_bytes = "0.11.14"
sha2 = "0.10.8"

ic-stable-structures = "0.6.5"
table = { path = "../../libraries/table" }
tournaments = { path = "../../libraries/tournaments" }
user = { path = "../../libraries/user" }

[features]
default = []
test_default = []
