[package]
name = "users_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
getrandom = { version = "0.2.15", features = ["custom"] }
thiserror = "1.0.57"
serde.workspace = true
lazy_static = "1.4.0"
ic-ledger-types = "0.15.0"
serde_bytes = "0.11.14"
sha2 = "0.10.8"
ic-verifiable-credentials = { git = "https://github.com/hanumetheus/verifiable-credentials-sdk.git", branch = "bump-ic-cdk" }
ic-stable-structures = { workspace = true }
ic-canister-sig-creation = "1.2.0"

authentication = { path = "../../libraries/authentication" }
canister_functions = { path = "../../libraries/canister_functions" }
intercanister_call_wrappers = { path = "../../libraries/intercanister_call_wrappers" }
errors = { path = "../../libraries/errors" }
user = { path = "../../libraries/user" }

[features]
default = []
test_default = []
