[package]
name = "users_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde.workspace = true
lazy_static = "1.4.0"
futures = "0.3.31"
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true } # Feel free to remove this dependency if you don't need timers
ic-ledger-types = "0.15.0"
ic-stable-structures = { workspace = true }
serde_bytes = "0.11.14"
sha2 = "0.10.8"
thiserror = "1.0.57"

authentication = { path = "../../libraries/authentication" }
canister_functions = { path = "../../libraries/canister_functions" }
currency = { git = "https://github.com/zk-game-dao/currency.git", branch = "main" }
errors = { path = "../../libraries/errors" }
user = { path = "../../libraries/user" }
intercanister_call_wrappers = { path = "../../libraries/intercanister_call_wrappers" }

[features]
default = []
test_default = []
